--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,11 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: CopyPublishBuildArtifacts@1
+  inputs:
+    CopyRoot: '/home/vsts/work/1/a'
+    ArtifactName: 'drop'
+    ArtifactType: 'Container'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
